--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
   <!--配置Spring映射文件 加载 放在前面-->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:com/wzg/ssh/*/spring/*.xml</param-value>
+    <param-value>classpath:spring-config.xml</param-value>
   </context-param>
 
 
@@ -29,6 +29,16 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <el-ignored>false</el-ignored>
+    </jsp-property-group>
+  </jsp-config>
+
+
 
 
 
